--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Blog | SENAI</title>
 </head>
 <body>
-    <h1>Luan Santana | Notícias 📊</h1>
-    <h3>O que é bonito é pra ser visto</h3>
-    
+    <header>
+        <div id="logo"></div>
+        <p>logo aqui</p>
+        <div id="links"></div>
+        <p>Vários links</p>
+    </header>
 </body>
 </html>
