--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 </head>
 <body>
     <header>
-        <div id="logo"></div>
-        <p>logo aqui</p>
-        <div id="links"></div>
-        <p>Vários links</p>
+        
+        <div id="logo">
+            <img id="logo-img" src="assets/styles/images/logotipo (1).jpg" alt="Luan Santana sendo Luan Santana"/>
+            <p> Logo aqui </p>
+        
+        </div>
+
+        <div id="links">
+            <a href="#home">Home</a>
+            <a href="#main">Principais</a>
+            <a href="#news">Ultimas notícias</a>
+            <a href="#concert">Shows</a>
+            <a href="#contact">Contato</a>
+        </div>
     </header>
 </body>
 </html>
